mysql/mysql-deployment-no-pvc.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          limits:
            cpu: 1
            memory: 2048Mi
          requests:
            memory: 1024Mi
